--- a/Templates/results_table.html
+++ b/Templates/results_table.html
@@ -10,6 +10,7 @@
 	</title>
     <body>
     	<h1>{{ pagetitle }}</h1>
+    	<h2>Total buildings: {{ count_bldgs }}</h2>
         {% render_table buildings %}
     </body>
 </html>
