--- a/Templates/results_table.html
+++ b/Templates/results_table.html
@@ -11,6 +11,7 @@
     <body>
     	<h1>{{ pagetitle }}</h1>
     	<h2>Total buildings: {{ count_bldgs }}</h2>
+    	<h2>Average electricity consumption: {{ avg_cons }}</h2>
         {% render_table buildings %}
     </body>
 </html>
