--- a/Templates/results_table.html
+++ b/Templates/results_table.html
@@ -9,12 +9,11 @@
 	{{ pagetitle }}
 	</title>
     <body>
-    	<h3>{{ bldgtitle }}</h3>
-    	<h3>{{ sqfttitle }}</h3>
-    	<h3>{{ yrconsttitle }}</h3>
+    	<h4>{{ bldgtitle }} &emsp; {{ sqfttitle }} &emsp; {{ yrconsttitle }}</h4>
     	
-    	<h2>Total buildings: {{ count_bldgs }}</h2>
-    	<h2>Average electricity consumption: {{ avg_cons }}</h2>
+    	<h3>Total buildings: {{ count_bldgs }}</h3>
+    	<h3>Average electricity consumption for 2003: {{ avg_cons }} thousand BTUs</h3>
+    	<h3>Average electricity price for region in 2003: {{ avgprice }} cents per kWH</h3>
         {% render_table buildings %}
     </body>
 </html>
