--- a/Templates/formdemo.html
+++ b/Templates/formdemo.html
@@ -1,3 +1,4 @@
+<title>Search CBECS</title>
 <form action="/formdemo/" method="post">{% csrf_token %}
 {{ form.as_p }}
 <input type="submit" value="Submit" />
