Add building use filter

--- a/Templates/results_table.html
+++ b/Templates/results_table.html
@@ -9,7 +9,7 @@
 	{{ pagetitle }}
 	</title>
     <body>
-    	<h4>{{ bldgtitle }} &emsp; {{ sqfttitle }} &emsp; {{ yrconsttitle }}</h4>
+    	<h4>{{ bldgtitle }} &emsp; {{ sqfttitle }} &emsp; {{ yrconsttitle }} &emsp; {{ bldg_use }}</h4>
     	
     	<h3>Total buildings: {{ count_bldgs }}</h3>
     	<h3>Average total electricity consumption for 2003: {{ avg_cons }} thousand BTUs</h3>
