Add static files for table viewer

--- a/Templates/results_table.html
+++ b/Templates/results_table.html
@@ -5,7 +5,7 @@
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <head>
-        <link rel="stylesheet" href="{{ STATIC_URL }}django_tables2/themes/paleblue/css/screen.css" />
+        <link rel="stylesheet" href="/static/screen.css" />
         <style type="text/css">
 			table.ex1 {table-layout:auto}
 			h4 {text-align:center}
@@ -28,9 +28,6 @@
     	<td><h3>Average total electricity cost for 2003: ${{ avg_cost_yr|intcomma }}</h3></td></tr>
     	</table>
     	<br /><br />
-    	<table class="ex1" table-layout="auto" text-align="center"
-    		border-collapse="collapse" margin-left="auto"  margin-right="auto"}
         {% render_table buildings %}
-        </table>
     </body>
 </html>
