--- a/Templates/results_table.html
+++ b/Templates/results_table.html
@@ -9,6 +9,7 @@
         <style type="text/css">
 			table.ex1 {table-layout:auto}
 			h4 {text-align:center}
+			table.paleblue { margin: 0 auto; width: 80%; } 
 		</style>
     </head>
     <title>
